--- a/samples/full/additionals/user_config.tex
+++ b/samples/full/additionals/user_config.tex
@@ -19,6 +19,7 @@
 	% ################################################
 	% Definitions for dissertation
 	% ################################################
+	% \def\myAuthorSex{female}  % male/female
 	%	\def\myTitle{Mein extravaganter Dissertationstitel}  % title of the dissertation
 	%	\def\mySubtitle{Weitere Erklärungen zum Titel}  % title of dissertation
 	
