--- a/design-template/titlepage_bachelor_master.tex
+++ b/design-template/titlepage_bachelor_master.tex
@@ -7,8 +7,8 @@
 	\end{figure}
 	\sffamily{	
 	\vspace*{1\baselineskip}
-	\textbf{\small Diese Arbeit wurde vorgelegt am Lehrstuhl für Geotechnik im Bauwesen der RWTH Aachen}
-	\vspace*{1\baselineskip}
+	\textbf{\small Diese Arbeit wurde vorgelegt am Lehrstuhl für Geotechnik im Bauwesen der RWTH Aachen}\\%
+	\vspace*{1\baselineskip}%
 	\textbf{\small\textcolor{grey}{The present work was submitted to the Chair of Geotechnical Engineering}}
 	\vspace*{3\baselineskip}
 	
