added uarial package
Usage of Arial-cloned font as ssfamily font

--- a/design-template/designGiB.tex
+++ b/design-template/designGiB.tex
@@ -42,6 +42,8 @@
 	\usepackage{textcomp}  % eg. modified € und § symbols
 	\usepackage{csquotes}  % provides advanced facilities for inline and display quotations
 	
+	\usepackage[scaled]{uarial}  % Use Arial-clone font as sffamily-font
+	
 	\usepackage{xcolor}  % makes latex more colorful
 	
 	\usepackage{microtype}  % Better results in line breaks and overfull boxes 
