Name changes from GiB to GUT

--- a/design-template/titlepage_bachelor_master.tex
+++ b/design-template/titlepage_bachelor_master.tex
@@ -7,9 +7,9 @@
 	\end{figure}
 	\sffamily{	
 	\vspace*{1\baselineskip}
-	\textbf{\small Diese Arbeit wurde vorgelegt am Lehrstuhl für Geotechnik im Bauwesen der RWTH Aachen}\\%
+	\textbf{\small Diese Arbeit wurde vorgelegt am Institut für Geomechanik und Untergrundtechnik}\\%
 	\vspace*{1\baselineskip}%
-	\textbf{\small\textcolor{grey}{The present work was submitted to the Chair of Geotechnical Engineering}}
+	\textbf{\small\textcolor{grey}{The present work was submitted to the Institute of Geomechanics and Underground Technology}}
 	\vspace*{3\baselineskip}
 	
 	\begin{minipage}[t]{0.48\linewidth}
