--- a/samples/full/main.tex
+++ b/samples/full/main.tex
@@ -1,4 +1,4 @@
-\input{../../design-template/designGiB}  % import GiB design for dissertation
+\input{../../design-template/designGUT}  % import GUT design for dissertation
 % ###################################################################################
 % A 'user_config.tex' file has to be created in the subfolder 'additionals'
 % All document type dependent (BA, MA, DISS) settings take place in this file, i.e. setting title, reviewer name or type of document. Additionally loaded packages or other user-dependent settings like adding a bibliography can also be defined there. 
